--- a/.github/workflows/test_dum_on_featuer.yml
+++ b/.github/workflows/test_dum_on_featuer.yml
@@ -45,7 +45,10 @@ jobs:
         run: pnpm install
 
       - name: Setup dum
-        run: curl -sSL https://bina.egoist.sh/egoist/dum | sh
+        run: |
+          curl -sSL https://github.com/egoist/dum/releases/download/v0.1.19/dum-x86_64-unknown-linux-musl.tar.gz | tar -x
+          mv dum /usr/bin/dum
+          which dum
 
       - name: build
         run: dum run build
