--- a/.github/workflows/publish_on_main.yml
+++ b/.github/workflows/publish_on_main.yml
@@ -30,6 +30,7 @@ jobs:
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+          cache: true
 
       - name: Install dependencies
         run: bun install
